# jetson-ai-labs

./: CMakeLists.txt  CMakePresets.json  install_vcpkg.sh  vcpkg.json
src/: CMakeLists.txt
src/my-recognition/: CMakeLists.txt  my-recognition.cpp
src/segnet/: CMakeLists.txt  README.md  segnet.cpp
